crates/cargo-tsuno/tests/fixtures/verify_cli/fail/rejects_loops_without_invariants.rs
#[tsuno::verify]
fn bad_loop(mut x: i32) {
    loop {
        if x > 0 {
            break;
        }
        x = x + 1;
    }
}

fn main() {}
